fix z-index from modal

--- a/src/assets/sass/helpers/_parametrs.scss
+++ b/src/assets/sass/helpers/_parametrs.scss
@@ -61,7 +61,7 @@ li {
     display: none;
     width: 100%;
     height: 100%;
-    z-index: 16;
+    z-index: 55;
     top: 0;
     left: 0;
     right: 0;
